tests/compile_fail/borrow_mut/associated_type.rs
trait Trait {
    type Assoc;
}

#[derive(derive_more::BorrowMut)]
struct Foo<T: Trait>(T::Assoc);

fn main() {}
